<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/request_design"
        android:textColor="@color/gas_green"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:indeterminate="false"
        android:indeterminateOnly="false"
        android:progress="25"
        android:progressDrawable="@drawable/recbgprogress"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/graphic_type"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/spinner_dropdown"
                android:gravity="center"
                android:popupBackground="@drawable/spinner_dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/image"
                app:layout_constraintBottom_toBottomOf="@+id/spinner"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintTop_toTopOf="@+id/spinner"
                app:srcCompat="@drawable/ic_drop_down" />


            <EditText
                android:id="@+id/brand_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/editext_shape"
                android:ems="10"
                android:fontFamily="@font/quicksand_medium"
                android:hint="@string/brand_name"
                android:inputType="textMultiLine"
                android:padding="18dp"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColor="@color/gas_green"
                android:textColorHint="@color/grey_spinner"
                android:textSize="15sp"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/spinner"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/brand_tagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/editext_shape"
                android:ems="10"
                android:fontFamily="@font/quicksand_medium"
                android:hint="@string/brand_tagline"
                android:inputType="textMultiLine"
                android:padding="18dp"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColor="@color/gas_green"
                android:textColorHint="@color/grey_spinner"
                android:textSize="15sp"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/brand_name"
                tools:ignore="TextContrastCheck" />


            <EditText
                android:id="@+id/preferred_color_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/editext_shape"
                android:ems="10"
                android:fontFamily="@font/quicksand_medium"
                android:hint="@string/preferred_color_theme"
                android:inputType="textMultiLine"
                android:padding="18dp"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColor="@color/gas_green"
                android:textColorHint="@color/grey_spinner"
                android:textSize="15sp"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/brand_tagline"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/des_your_vision_of_design"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/editext_shape"
                android:ems="10"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="start"
                android:hint="@string/describe_your_vision_of_design"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:padding="18dp"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColor="@color/gas_green"
                android:textColorHint="@color/grey_spinner"
                android:textSize="15sp"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/preferred_color_theme"
                tools:ignore="TextContrastCheck" />


            <EditText
                android:id="@+id/any_comment_you_want_to_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:background="@drawable/editext_shape"
                android:ems="10"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="start"
                android:hint="@string/any_comments_you_want_to_add"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:padding="18dp"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColor="@color/gas_green"
                android:textColorHint="@color/grey_spinner"
                android:textSize="15sp"
                android:theme="@style/EditTextTheme"
                app:layout_constraintEnd_toEndOf="@+id/spinner"
                app:layout_constraintStart_toStartOf="@+id/spinner"
                app:layout_constraintTop_toBottomOf="@+id/des_your_vision_of_design"
                tools:ignore="TextContrastCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/bg_down"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/wallet_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/wallet_balance"
            android:textColor="@color/bg_linear_wallet"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/wallet_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wallet_text"
            android:layout_marginStart="40dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quicksand_medium"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:text="Rs 2400" />


        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/wallet_text"
            android:layout_alignBottom="@+id/wallet_amt"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/bg_next"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:gravity="center"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/next"
            android:textColor="@color/bg_linear_green"
            android:textSize="17sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>